Function to load and preprocess images, and start implementing multigrid

--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -7,7 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "from scipy.ndimage import gaussian_filter"
    ]
   },
   {
@@ -340,12 +343,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9033496e",
+   "metadata": {},
+   "source": [
+    "## Load and preprocess images"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7a794fd4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_image(filepath):\n",
+    "    img = Image.open(filepath).convert('L')  # Convert to grayscale\n",
+    "    img = np.array(img, dtype=np.float32)\n",
+    "    #Trenger vi normaliseting????????\n",
+    "    img = img / 255.0  # Normalize to [0, 1]\n",
+    "    return img\n",
+    "\n",
+    "def preprocess_image(img, sigma=1.0):\n",
+    "    # Apply Gaussian smoothing\n",
+    "    smoothed_img = gaussian_filter(img, sigma=sigma)\n",
+    "    return smoothed_img\n",
+    "\n",
+    "def calculate_image_derivatives(img0, img1):\n",
+    "    It = img1 - img0\n",
+    "    #Note flipped indexes in x and y direction, because of matrix...\n",
+    "    #Calculate Ix\n",
+    "    Ix_0 = np.zeros_like(img0) \n",
+    "    Ix_1 = np.zeros_like(img0)\n",
+    "\n",
+    "    Ix_0[:,:-1] = img0[:, 1:] - img0[:, :-1]\n",
+    "    Ix_0[:,-1] = Ix_0[:,-2]\n",
+    "\n",
+    "    Ix_1[:,:-1] = img1[:, 1:] - img1[:, :-1]\n",
+    "    Ix_1[:,-1] = Ix_1[:,-2]\n",
+    "\n",
+    "    Ix = (Ix_0 + Ix_1) / 2.0\n",
+    "    #Calculate Iy\n",
+    "    Iy_0 = np.zeros_like(img0) \n",
+    "    Iy_1 = np.zeros_like(img0)\n",
+    "    #Note, y-axis is flipped in images (not 100% sure if we need to do this)\n",
+    "    Iy_0[1:,:] = img0[:-1,:] - img0[1:,:]\n",
+    "    Iy_0[0,:] = Iy_0[1,:]\n",
+    "\n",
+    "    Iy_1[1:,:] = img1[:-1,:] - img1[1:,:]\n",
+    "    Iy_1[0,:] = Iy_1[1,:]\n",
+    "\n",
+    "    Iy = (Iy_0 + Iy_1) / 2.0\n",
+    "    \n",
+    "    return Ix, Iy, It\n",
+    "\n",
+    "def get_derivatives_rhs(filepath1, filepath2):\n",
+    "    img0 = load_image(filepath1)\n",
+    "    img1 = load_image(filepath2)\n",
+    "    img0 = preprocess_image(img0, sigma=1.0)\n",
+    "    img1 = preprocess_image(img1, sigma=1.0)\n",
+    "    Ix, Iy, It = calculate_image_derivatives(img0, img1)\n",
+    "    rhsu = -It * Ix\n",
+    "    rhsv = -It * Iy\n",
+    "    return Ix, Iy, rhsu, rhsv\n"
+   ]
   },
   {
    "cell_type": "code",
