--- a/project_notebook.ipynb
+++ b/project_notebook.ipynb
@@ -1322,7 +1322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ag",
    "language": "python",
    "name": "python3"
   },
@@ -1336,7 +1336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
