Describe multigrid a bit more

--- a/project_notebook copy.ipynb
+++ b/project_notebook copy.ipynb
@@ -555,12 +555,9 @@
    "id": "cbff0b95",
    "metadata": {},
    "source": [
-    "The CG method converges for all resolutions $N = 2^k$, $k = 6,\\dots,9$, and reaches the required tolerance. The convergence curves for $k = 6,7,8$ are smooth, while the curve for $k = 9$ shows a brief irregularity in the first few iterations. This kind of non-monotonic behaviour can occur while the Krylov space is being constructed and does not indicate instability. After this initial phase, the residual decreases steadily for all grid sizes.\n",
+    "The CG method converges for all resolutions $N = 2^k$, $k = 6,\\dots,9$, and reaches the required tolerance. The convergence curves for $k = 6,7,8$ are smooth, while the curve for $k = 9$ shows a brief irregularity in the first few iterations. After this initial phase, the residual decreases steadily for all grid sizes.\n",
     "\n",
-    "The number of iterations generally increases with $k$. A small exception occurs at $k=7$, where the iteration count is slightly lower than for $k=6$. Such fluctuations are normal, since the effective conditioning of the system depends not only on the grid spacing but also on the structure of the image derivatives at each resolution. The overall trend, however, is clear. Larger grids require more iterations. This matches the theoretical behaviour for elliptic PDE-like problems, where the condition number grows proportionally to $N^2$, leading to an iteration count that increases approximately linearly with $N$.\n",
-    "\n",
-    "The computation time grows much faster than the iteration count. Each iteration involves operations on all $N^2$ pixels, so the total time scales roughly like $\\text{time} \\sim (\\text{iterations}) \\times N^2.$\n",
-    "This leads to a sharp rise in runtime from $k=6$ to $k=9$, even in cases where the increase in iteration count is modest. Overall, CG remains robust and consistent across all problem sizes, but its computational cost grows rapidly with grid resolution, which makes it less suitable for large images without preconditioning."
+    "The number of iterations generally increases with $k$. A small exception occurs at $k=7$, where the iteration count is slightly lower than for $k=6$. The overall trend, however, is clear. Larger grids require more iterations. The computation time grows much faster than the iteration count. Each iteration involves operations on all $N^2$ pixels, so the total time scales roughly like $\\text{time} \\sim (\\text{iterations}) \\times N^2.$ This leads to a sharp rise in runtime from $k=6$ to $k=9$, even in cases where the increase in iteration count is modest. Overall, CG remains robust and consistent across all problem sizes, but its computational cost grows rapidly with grid resolution, which makes it less suitable for large images without preconditioning."
    ]
   },
   {
@@ -581,11 +578,21 @@
     "motion field than the first test case. It is therefore well suited for checking that\n",
     "smoothing, restriction, prolongation and the coarse grid solve are working correctly.\n",
     "\n",
+    "When implementing our multigrid method we follow the project description, using the suggested restriction stencil, and a simple prolongation that copies a value in the coarse grid to the surrounding 4 pixels in the finer grid. As a smoother we use the red black Gauss Seidel.\n",
+    "\n",
     "The flow field computed by MG reproduces the circular movement in the interior of the\n",
     "image and smoothly decreases towards the boundary due to the Dirichlet conditions.\n",
     "The result matches the expected motion and confirms that the MG implementation\n",
     "produces a correct solution for this more difficult test case."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0447573",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
