Add source gerschgorin

--- a/project_notebook copy.ipynb
+++ b/project_notebook copy.ipynb
@@ -307,11 +307,11 @@
     "We first consider Dirichlet boundary conditions. For $A_1^{dir}$ all diagonal\n",
     "entries satisfy $a_{ii}=4$, so all Gershgorin disk centres coincide. The possible\n",
     "radii are $r_i\\in\\{2,3,4\\}$. Only some of the disks reach zero, so no eigenvalue\n",
-    "can be equal to zero. Since $A_1^{dir}$ is symmetric with strictly positive\n",
+    "can be equal to zero [Saad, Theorem 4.7]. Since $A_1^{dir}$ is symmetric with strictly positive\n",
     "eigenvalues, it is positive definite.\n",
     "\n",
     "Next we consider Neumann boundary conditions. Here each diagonal entry satisfies $a_{ii} = r_i,$ because the radius is exactly the number of neighbours of each point. In this\n",
-    "case all Gershgorin disks touch zero, and therefore we can only conclude that $A_1^{neu}$ is positive semi-definiteness.\n",
+    "case all Gershgorin disks touch zero, and therefore we can only conclude that all eigenvalues of $A_1^{neu}$ are non-negative [Saad, Theorem 4.6], i.e. it is positive semi-definite.\n",
     "\n",
     "The figure below shows the corresponding Gershgorin disks for both cases.\n"
    ]
