--- a/project_notebook copy.ipynb
+++ b/project_notebook copy.ipynb
@@ -61,7 +61,9 @@
    "source": [
     "## Defining the linear system\n",
     "\n",
-    "The system (1) can be written as a problem on the form $Ax=b$, where\n",
+    "Since the solver we will use, find solutions on vector form, we rewrite u and v as vectors in $\\mathbb{R}^{nm}$ by using a row wise ordering.\n",
+    "Finally we concatenate u and v into a single vector of size $2nm$. The system (1) can then be written as a problem on the form $Ax=b$, where\n",
+    "\n",
     "\n",
     "$$\n",
     "      \\begin{bmatrix}\n",
